[package]
name = "kurbo"
version = "0.5.5"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "curve", "curves", "bezier", "geometry", "no_std"]
repository = "https://github.com/linebender/kurbo"
description = "A 2D curves library"
readme = "README.md"
categories = ["graphics"]

[package.metadata.docs.rs]
features = ["mint"]

[dependencies]
#### arrayvec = "0.4.11"
arrayvec = { version = "0.5.1", default-features = false } #### Disable default features to support `no_std`
introsort = { version = "0.6.0", default-features = false } #### Sort library. Disable default features to support `no_std`
libm = "0.2.1" #### Math library for `no_std`

[dependencies.mint]
version = "0.5.1"
optional = true

# This is used for research but not really needed; maybe refactor.
[dev-dependencies]
rand = "0.6"
